fix button alignment for year-button on mobile, remove opening text & return to search button on hosp page

--- a/source/css/_theme.scss
+++ b/source/css/_theme.scss
@@ -80,6 +80,11 @@
     font-weight: 800;
     line-height: 1.2;
     margin-bottom: .5em;
+
+    span.controls {
+      text-align: right;
+      font-size: .7em;
+    }
   }
 }
 
@@ -117,6 +122,7 @@
 }
 
 .controls {
+  margin-bottom: .5em;
   @include media($mobile) {
     a:first-child {
       display: block;
